Avoid shifting elements when mousing over a tags (#1866)

--- a/styles/less/global/elements.less
+++ b/styles/less/global/elements.less
@@ -251,8 +251,7 @@
 
     a:hover,
     a.active {
-        font-weight: bold;
-        text-shadow: 0 0 8px light-dark(@dark-blue, @golden);
+        text-shadow: 0 0 1px currentColor, 0 0 1px currentColor, 0 0 8px light-dark(@dark-blue, @golden);
     }
 
     fieldset {
